--- a/package.json
+++ b/package.json
@@ -41,24 +41,24 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@razee/kubernetes-util": "^0.1.3",
-    "@razee/razeedeploy-core": "^0.9.0",
-    "@razee/remoteresources3": "^0.6.2",
+    "@razee/kubernetes-util": "^0.1.6",
+    "@razee/razeedeploy-core": "^0.9.1",
+    "@razee/remoteresources3": "^0.6.4",
+    "ansible-vault": "^1.0.0",
     "bunyan": "^1.8.14",
-    "object-path": "^0.11.5",
-    "ansible-vault": "^1.0.0"
+    "object-path": "^0.11.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "dockerlint": "^0.3.9",
-    "eslint": "^7.5.0",
+    "eslint": "^7.11.0",
     "markdownlint-cli": "^0.23.2",
-    "mocha": "^8.0.1",
-    "nock": "^13.0.3",
+    "mocha": "^8.1.3",
+    "nock": "^13.0.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rewire": "^5.0.0",
-    "sinon": "^9.0.2",
+    "sinon": "^9.2.0",
     "yaml-lint": "^1.2.4"
   }
 }
