--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nock": "^13.0.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "release-it": "^14.2.2",
     "rewire": "^5.0.0",
     "sinon": "^9.2.0",
     "yaml-lint": "^1.2.4"
