feat(ci): Lots of shuffling and updating to prepare makefile to completion

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
       "name": "Greg Swift"
     }
   ],
+  "git": {
+    "requireBranch": "master"
+  },
   "publishConfig": {
     "access": "public"
   },
