fix(ci): Disable release-it from tagging release, it already will be

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     }
   ],
   "git": {
-    "requireBranch": "master"
+    "requireBranch": "master",
+    "tag": false
   },
   "publishConfig": {
     "access": "public"
